@@ -1,6 +1,9 @@
 2005-07-20  Philippe Gerum  <rpm@xenomai.org>
 
-	* skins/rtai/syscall.c (__rt_task_set_mode): Fix order of parameters.
+	* skins/rtai/syscall.c (__rt_task_set_mode): Fix order of
+	parameters.
+	(__rt_task_set_mode): Properly switch to secondary mode if
+	T_PRIMARY in found in the clrmask.
 
 	* include/nucleus/asm-*/syscall.h: Propagate return values from
 	__xn_copy_from_user/__xn_copy_to_user.
